Cleanup and addition of roles editor and unit tests.

--- a/ssWeb/Views/Shared/_topNav.cshtml
+++ b/ssWeb/Views/Shared/_topNav.cshtml
@@ -21,7 +21,7 @@
                         <li>@Html.ActionLink("Admin Surveys", "Index", "Surveys")</li>
                         <li class="divider"></li>
                         <li>@Html.ActionLink("Admin Users", "Index", "Users")</li>
-                        <li>@Html.ActionLink("Admin User Roles", "Index", "UserRoles")</li>
+                        <li>@Html.ActionLink("Admin User Roles", "Index", "Roles")</li>
                     </ul>
                 </li>
             </ul>
