--- a/ssWeb/Views/Shared/_topNav.cshtml
+++ b/ssWeb/Views/Shared/_topNav.cshtml
@@ -19,6 +19,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li>@Html.ActionLink("Admin Surveys", "Index", "Surveys")</li>
+                        <li>@Html.ActionLink("Admin Questions", "Index", "Questions")</li>
+                        <li>@Html.ActionLink("Admin Responses", "Index", "Responses")</li>
                         <li class="divider"></li>
                         <li>@Html.ActionLink("Admin Users", "Index", "Users")</li>
                         <li>@Html.ActionLink("Admin User Roles", "Index", "Roles")</li>
