--- a/ssWeb/Views/Shared/_topNav.cshtml
+++ b/ssWeb/Views/Shared/_topNav.cshtml
@@ -1,6 +1,6 @@
 ﻿@model dynamic
 
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -8,7 +8,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Simple Survey", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <a href="/Home/Index" class="navbar-brand"><i class="icon-cvs-heart "></i> Simple Survey</a>
+                
+            <div class="cvsRed-lightest">
+                <span class="visible-xs">[xs]</span>
+                <span class="visible-sm">[sm]</span>
+                <span class="visible-md">[md]</span>
+                <span class="visible-lg">[lg]</span>
+            </div>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
